--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -143,7 +143,7 @@ li {
         cursor: pointer;
         text-decoration: none;
         position: relative;
-        top: -8px;
+        top: -16px;
     }
 
 
@@ -154,8 +154,8 @@ li {
     }
 
     .logix .regIster {
-        position: relative;
-        left: 3%;
+        position: absolute;
+        left: -13%;
         top: -10px;
     }
 
